# Quartz

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/quartz/: CMakeLists.txt  imagewriter.cpp  imagewriter.h  main.cpp  renderwindow.cpp  renderwindow.h  version.h
apps/quartz/resources/: quartz.rc
apps/scene2qml/: CMakeLists.txt  exporter.cpp  exporter.h  importer.cpp  importer.h  main.cpp  scene.h
cmake/: Findassimp.cmake
examples/: CMakeLists.txt
examples/raytrace-cpp/: CMakeLists.txt  main.cpp  raytrace-cpp.qrc
examples/raytrace-qml/: CMakeLists.txt  main.cpp  main.qml  raytrace-qml.qrc
include/Qt3DRaytrace/: qabstractrenderer.h  qabstracttexture.h  qcamera.h  qcameralens.h  qcolorspace.h  qdistantlight.h  qgeometry.h  qgeometrydata.h  qgeometryfactory.h  qgeometryrenderer.h  qimagedata.h  qmaterial.h  qmesh.h  qraytraceaspect.h  qrendererinterface.h  qrenderimage.h  qrendersettings.h  qt3draytrace_global.h  qt3draytracecontext.h  qtexture.h  qtextureimage.h  qtextureimagefactory.h  qvulkanrenderer.h
include/Qt3DRaytraceExtras/: qfirstpersoncameracontroller.h  qt3dquickwindow.h  qt3draytraceextras_global.h  qt3dwindow.h
src/: CMakeLists.txt
src/extras/: CMakeLists.txt  qfirstpersoncameracontroller.cpp  qfirstpersoncameracontroller_p.h  qt3dquickwindow.cpp  qt3dquickwindow_p.h  qt3draytraceextras_global_p.h  qt3dwindow.cpp  qt3dwindow_p.h  qt3dwindowrenderer.cpp  qt3dwindowrenderer_p.h
src/qml/: CMakeLists.txt
src/qml/quick3draytrace/: CMakeLists.txt  qmldir  qtquick3draytraceplugin.cpp  qtquick3draytraceplugin.h
src/qml/quick3draytraceextras/: CMakeLists.txt  qmldir  qtquick3draytraceextrasplugin.cpp  qtquick3draytraceextrasplugin.h
src/raytrace/: CMakeLists.txt  qraytraceaspect.cpp  qraytraceaspect_p.h  qt3draytrace_global_p.h  qt3draytracecontext.cpp
src/raytrace/backend/: abstractrenderer_p.h  abstracttexture.cpp  abstracttexture_p.h  backendnode.cpp  backendnode_p.h  cameralens.cpp  cameralens_p.h  distantlight.cpp  distantlight_p.h  entity.cpp  entity_p.h  geometry.cpp  geometry_p.h  geometryrenderer.cpp  geometryrenderer_p.h  handles_p.h  managers_p.h  material.cpp  material_p.h  rendersettings.cpp  rendersettings_p.h  textureimage.cpp  textureimage_p.h  transform.cpp  transform_p.h  types_p.h
src/raytrace/frontend/: qabstracttexture.cpp  qabstracttexture_p.h  qcamera.cpp  qcamera_p.h  qcameralens.cpp  qcameralens_p.h  qdistantlight.cpp  qdistantlight_p.h  qgeometry.cpp  qgeometry_p.h  qgeometryrenderer.cpp  qgeometryrenderer_p.h  qmaterial.cpp  qmaterial_p.h  qmesh.cpp  qmesh_p.h  qrendersettings.cpp  qrendersettings_p.h  qtexture.cpp  qtexture_p.h  qtextureimage.cpp  qtextureimage_p.h
src/raytrace/io/: common_p.h  defaultimageimporter.cpp  defaultimageimporter_p.h  defaultmeshimporter.cpp  defaultmeshimporter_p.h  imageimporter_p.h  meshimporter_p.h
src/raytrace/jobs/: loadgeometryjob.cpp  loadgeometryjob_p.h  loadtexturejob.cpp  loadtexturejob_p.h  updateworldtransformjob.cpp  updateworldtransformjob_p.h
src/raytrace/renderers/: CMakeLists.txt
src/raytrace/renderers/vulkan/: CMakeLists.txt  commandbuffer.cpp  commandbuffer.h  descriptors.h  device.cpp  device.h  frameadvanceservice.cpp  geometry.h  glsl.h  initializers.h  qvulkanrenderer.cpp  qvulkanrenderer_p.h  renderer.cpp  renderer.h  resourcebarrier.h  shadermodule.cpp  shadermodule.h  vkcommon.h  vkresources.h  vulkanframeadvanceservice.cpp  vulkanframeadvanceservice.h
src/raytrace/renderers/vulkan/jobs/: buildgeometryjob.cpp  buildgeometryjob.h  buildscenetlasjob.cpp  buildscenetlasjob.h  destroyexpiredresourcesjob.cpp  destroyexpiredresourcesjob.h  destroyretiredresourcesjob.cpp  destroyretiredresourcesjob.h  updateemittersjob.cpp  updateemittersjob.h  updateinstancebufferjob.cpp  updateinstancebufferjob.h  updatematerialsjob.cpp  updatematerialsjob.h  updaterenderparametersjob.cpp  updaterenderparametersjob.h  uploadtexturejob.cpp  uploadtexturejob.h
src/raytrace/renderers/vulkan/managers/: cameramanager.cpp  cameramanager.h  commandbuffermanager.cpp  commandbuffermanager.h  descriptormanager.cpp  descriptormanager.h  scenemanager.cpp  scenemanager.h  sceneresourceset.h  stagingresourcemanager.cpp  stagingresourcemanager.h
src/raytrace/renderers/vulkan/pipeline/: computepipeline.cpp  computepipeline.h  graphicspipeline.cpp  graphicspipeline.h  pipeline.cpp  pipeline.h  raytracingpipeline.cpp  raytracingpipeline.h
src/raytrace/renderers/vulkan/services/: frameadvanceservice.cpp  frameadvanceservice.h
src/raytrace/renderers/vulkan/shaders/: .gitignore  CMakeLists.txt  bindings.glsl.h  compile.py  display.frag.glsl  display.vert.glsl  pathtrace.rchit.glsl  pathtrace.rgen.glsl  pathtrace.rmiss.glsl  queryemission.rchit.glsl  queryemission.rmiss.glsl  queryvisibility.rchit.glsl  queryvisibility.rmiss.glsl  samplelight.rchit.glsl  samplelight.rmiss.glsl  types.glsl.h  vulkan_shaders.qrc
src/raytrace/renderers/vulkan/shaders/lib/: bindings.glsl  bsdf.glsl  common.glsl  geometry.glsl  raygen.glsl  rayhit.glsl  resources.glsl  sampling.glsl  shared.glsl  types.glsl  xoroshiro64s.glsl
src/raytrace/utility/: movingaverage.h
